# pg_nifty_dump

./: Cargo.toml
src/: main.rs
src/static/: table_definition.sql
