[package]
name = "pg_nifty_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", default-features = false, features = ["std", "help", "error-context", "env", "derive"] }
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
csv = "1.2.1"
tokio-postgres = "0.7.8"
tokio = { version = "1.27.0", features = ["full"] }
tokio-postgres-rustls = "0.9.0"
pg_query = "0.7.0"
postgres_array = "0.11.1"
